feat(infrastructure): incremental Pokemon sync fetching only new entries